# tuigps-rs

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md
src/: app.rs  clock_sync.rs  constants.rs  data_model.rs  formatting.rs  gps_logger.rs  gpsd_client.rs  main.rs  position_hold.rs
src/ui/: constellation.rs  dashboard.rs  device_config.rs  device_panel.rs  error_panel.rs  fix.rs  mod.rs  nmea_viewer.rs  position.rs  satellite_table.rs  settings.rs  signal_chart.rs  sky_plot.rs  status_bar.rs  time_panel.rs  velocity.rs
