[package]
name = "tuigps-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization (gpsd JSON)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Linux system calls (ioctl for PPS, clock_settime)
nix = { version = "0.29", features = ["ioctl", "time"] }

# D-Bus for clock sync
zbus = { version = "5", optional = true }

# Open URLs in browser
open = "5"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging (optional, for debug)
tracing = "0.1"
tracing-subscriber = "0.3"

# Async stream for crossterm events
futures = "0.3"

[features]
default = ["dbus"]
dbus = ["dep:zbus"]
